--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Translate To Banana!</title>
 </head>
+
 <body>
-    <h1>Translate to banana language</h1>
+    <h1>Translate To Banana Language</h1> <br>
+    <div>Type Your English text Here 👇
+        <textarea id="txt-input" cols="80" rows="10" style="display:block;" placeholder="Tell your name"></textarea>
+    </div>
+    
+    <button id="btn-trans" style="display:block;">Translate</button>
+
+    <div>Translated Text
+        <textarea  id="txt-output" cols="80" rows="10" style="display: block;"></textarea>
+    </div>
+
+
+
+
+
+
+
+    <script src="app.js" type="text/javascript"></script>
 </body>
+
 </html>
