--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Translate To Banana Language</h1> <br>
     <div>Type Your English text Here 👇
-        <textarea id="txt-input" cols="80" rows="10" style="display:block;" placeholder="Tell your name"></textarea>
+        <textarea id="txt-input" cols="80" rows="10" style="display:block;" placeholder="Type your text here..."></textarea>
     </div>
     
     <button id="btn-trans" style="display:block;">Translate</button>
