--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Banana Translator!</title>
 </head>
 
 <body>
-    <h1>Translate To Banana Language</h1> <br>
-    <div>Type Your English text Here 👇
-        <textarea id="txt-input" cols="80" rows="10" style="display:block;" placeholder="Type your text here..."></textarea>
+    <nav>
+        <img src="img/minions_PNG66.png" alt="">
+    </nav>
+       <header> <h2>Translate To Banana Language</h1></header>
+    <div><p> Type Your English text Here 👇 </p> 
+        <textarea id="txt-input"  placeholder="Type your text here..."></textarea>
     </div>
     
-    <button id="btn-trans" style="display:block;">Translate</button>
+    <button id="btn-trans">Translate</button>
 
-    <div>Translated Text
-        <textarea  id="txt-output" cols="80" rows="10" style="display: block;"></textarea>
+    <div > <p>Translated Text 👇</p> 
+        <textarea  id="txt-output" ></textarea>
     </div>
 
 
