--- a/index.html
+++ b/index.html
@@ -13,22 +13,35 @@
     <nav>
         <img src="img/minions_PNG66.png" alt="">
     </nav>
-       <header> <h1>Translate To Banana Language</h1></header>
-    <div><p> Type Your English text Here 👇 </p> 
-        <textarea id="txt-input"  placeholder="Type your text here..."></textarea>
+    <header>
+        <h1>Translate To Banana Language</h1>
+    </header>
+    <div>
+        <p> Type Your English text Here 👇 </p>
+        <textarea id="txt-input" placeholder="Type your text here..."></textarea>
     </div>
-    
+
     <button id="btn-trans">Translate</button>
 
-    <div > <p>Translated Text 👇</p> 
-        <textarea  id="txt-output" ></textarea>
+    <div>
+        <p>Translated Text 👇</p>
+        <textarea id="txt-output"></textarea>
     </div>
 
 
 
 
 
-   <footer></footer>
+    <footer>
+        <p>Darshil Dixit | 2021</p>
+        <div>
+            <a href=" https://www.linkedin.com/in/darshildixit/" target="_blank"> <img src="img/linkedin.png"
+                    alt=""></a>
+            <a href=" https://github.com/DarshilDixit" target="_blank"> <img src="img/github.png" alt=""></a>
+            <a href="https://twitter.com/darshil_dixit" target="_blank"><img src="img/twitter.png" alt=""></a>
+        </div>
+
+    </footer>
 
     <script src="app.js" type="text/javascript"></script>
 </body>
